@startuml

title __MANAGER's Class Diagram__\n

  namespace learningapp {
    namespace manager {
      interface learningapp.manager.NotificationManager {
          {abstract} + addQuestionAndNotify()
      }
    }
  }
  

  namespace learningapp {
    namespace manager {
      class learningapp.manager.NotificationManagerImpl {
          + NotificationManagerImpl()
          + addQuestionAndNotify()
      }
    }
  }
  

  learningapp.manager.NotificationManagerImpl .up.|> learningapp.manager.NotificationManager
  learningapp.manager.NotificationManagerImpl o-- learningapp.services.NotificationService : notificationService
  learningapp.manager.NotificationManagerImpl o-- learningapp.repositories.ProfessorRepository : professorRepository
  learningapp.manager.NotificationManagerImpl o-- learningapp.services.QuestionService : questionService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
